@@ -107,6 +107,7 @@ name|char
 modifier|*
 name|_module_data_name
 parameter_list|,
+specifier|const
 name|void
 modifier|*
 modifier|*
