@@ -64,17 +64,17 @@ name|PAM_NUM_PRIMITIVES
 index|]
 init|=
 block|{
-literal|"pam_sm_acct_mgmt"
-block|,
 literal|"pam_sm_authenticate"
 block|,
-literal|"pam_sm_chauthtok"
+literal|"pam_sm_setcred"
 block|,
-literal|"pam_sm_close_session"
+literal|"pam_sm_acct_mgmt"
 block|,
 literal|"pam_sm_open_session"
 block|,
-literal|"pam_sm_setcred"
+literal|"pam_sm_close_session"
+block|,
+literal|"pam_sm_chauthtok"
 block|}
 decl_stmt|;
 end_decl_stmt
