@@ -86,6 +86,10 @@ index|[
 name|item_type
 index|]
 expr_stmt|;
+name|tmp
+operator|=
+name|NULL
+expr_stmt|;
 switch|switch
 condition|(
 name|item_type
@@ -118,6 +122,13 @@ case|:
 case|case
 name|PAM_AUTHTOK_PROMPT
 case|:
+if|if
+condition|(
+operator|*
+name|slot
+operator|!=
+name|NULL
+condition|)
 name|size
 operator|=
 name|strlen
@@ -134,13 +145,24 @@ name|item
 operator|!=
 name|NULL
 condition|)
+if|if
+condition|(
+operator|(
 name|tmp
 operator|=
 name|strdup
 argument_list|(
 name|item
 argument_list|)
-expr_stmt|;
+operator|)
+operator|==
+name|NULL
+condition|)
+return|return
+operator|(
+name|PAM_BUF_ERR
+operator|)
+return|;
 break|break;
 case|case
 name|PAM_CONV
@@ -159,28 +181,17 @@ name|item
 operator|!=
 name|NULL
 condition|)
+block|{
+if|if
+condition|(
+operator|(
 name|tmp
 operator|=
 name|malloc
 argument_list|(
 name|size
 argument_list|)
-expr_stmt|;
-break|break;
-default|default:
-return|return
-operator|(
-name|PAM_SYSTEM_ERR
 operator|)
-return|;
-block|}
-if|if
-condition|(
-name|item
-operator|!=
-name|NULL
-operator|&&
-name|tmp
 operator|==
 name|NULL
 condition|)
@@ -189,6 +200,28 @@ operator|(
 name|PAM_BUF_ERR
 operator|)
 return|;
+name|memcpy
+argument_list|(
+name|tmp
+argument_list|,
+name|item
+argument_list|,
+sizeof|sizeof
+argument_list|(
+expr|struct
+name|pam_conv
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+break|break;
+default|default:
+return|return
+operator|(
+name|PAM_SYSTEM_ERR
+operator|)
+return|;
+block|}
 if|if
 condition|(
 operator|*
