@@ -85,14 +85,12 @@ name|rsp
 decl_stmt|;
 name|struct
 name|pam_conv
+modifier|*
 name|conv
 decl_stmt|;
 name|int
 name|r
 decl_stmt|;
-if|if
-condition|(
-operator|(
 name|r
 operator|=
 name|pam_get_item
@@ -102,13 +100,18 @@ argument_list|,
 name|PAM_CONV
 argument_list|,
 operator|(
+specifier|const
 name|void
+operator|*
 operator|*
 operator|)
 operator|&
 name|conv
 argument_list|)
-operator|)
+expr_stmt|;
+if|if
+condition|(
+name|r
 operator|!=
 name|PAM_SUCCESS
 condition|)
@@ -117,6 +120,26 @@ operator|(
 name|r
 operator|)
 return|;
+if|if
+condition|(
+name|conv
+operator|==
+name|NULL
+condition|)
+block|{
+name|openpam_log
+argument_list|(
+name|PAM_LOG_ERROR
+argument_list|,
+literal|"no conversation function"
+argument_list|)
+expr_stmt|;
+return|return
+operator|(
+name|PAM_SYSTEM_ERR
+operator|)
+return|;
+block|}
 name|vsnprintf
 argument_list|(
 name|msgbuf
@@ -149,7 +172,7 @@ name|r
 operator|=
 call|(
 name|conv
-operator|.
+operator|->
 name|conv
 call|)
 argument_list|(
@@ -162,7 +185,7 @@ operator|&
 name|rsp
 argument_list|,
 name|conv
-operator|.
+operator|->
 name|appdata_ptr
 argument_list|)
 expr_stmt|;
